      previously Hailo would split them up nonsensically, which would
      inflate the token table a lot with little gain.

    - Preserve the capitalization of words that change case in the
      middle of the word. Examples include GumbyBRAIN, WoW, HoRRiBlE
      etc. Previously these and others that weren't 100% upper-case
      would all be lower cased.

0.43 2010-05-11 19:54:36

    - Tests failed on 0.42 without Test::Synopsis due to invalid test plan.

    - Don't test with both Mouse and Moose on Windows. Failed with
      Strawberry Perl + dmake, see report
      07242729-b19f-3f77-b713-d32bba55d77f.

    - Skip t/storage/001_meta/switch-order.t on OpenBSD where it's
      known to fail, see report 07172161-b19f-3f77-b713-d32bba55d77f.

0.42 2010-05-10 21:26:45

    - Hailo should now work on Windows. Dependency on two modules that
      had Windows failures in their dependencies has been dropped.

    - Remove Term::ProgressBar dependency, use Term::Sk
      instead. Unlike Term::ProgressBar it doesn't depend on
      Class::MethodMaker and Term::ReadKey. Those contributed a lot to
      our failures on Windows.
    
    - Don't hard depend on Test::Expect. It depends IO::Tty which does
      not work under any version of Windows, except under Cygwin (it
      calls fcntl(*fd, F_DUPFD, 3)).

    - Remove Test::Synopsis dependency. It depends on
      Filter::Util::Call which had some failures. Now only used if
      it's installed on the system already.

    - Remove MouseX/MooseX::Types dependency. We don't use any of the
      fancy type features, so there's no point in using this.

0.41 2010-04-23 00:24:24

    - Don't (optionally) use Sys::Prctl on Perl 5.13.0 and above. It
      was made redundant in perl core commit 7636ea95c5 by yours
      truly.

    - A script to benchmark Hailo on different locally installed
      perls.

    - Correct test count for TEST_EXHAUSTIVE.

    - Update HALBot on the Web link to http://bifurcat.es
